# api/app/controllers/results_controller.rb
@@ -1,9 +1,20 @@
 class ResultsController < ApplicationController
   def index
-    render json: cached_results
+    if params[:group_by].present?
+      render_grouped
+    else
+      render json: cached_results
+    end
   end
 
-  def hourly
+  private
+
+  def render_grouped
+    unless params[:group_by] == 'hour'
+      render json: { error: "unsupported group_by, expected 'hour'" }, status: :bad_request
+      return
+    end
+
     date = parse_date(params[:date])
 
     unless date
@@ -13,8 +24,6 @@ class ResultsController < ApplicationController
 
     render json: { date: date.iso8601, hours: Vote.hourly_totals(date) }
   end
-
-  private
 
   def cached_results
     Rails.cache.fetch('results', expires_in: 2.seconds) { Candidate.results }
